# virtest

./: .travis.yml  CMakeLists.txt  README.md
tests/: CMakeLists.txt  checks.cpp  plotdist.cpp  test.cpp
vir/: generators.h  metahelpers.h  test.h  testassert.h  typelist.h  typetostring.h
vir/detail/: color.h  macros.h  type_traits.h  ulp.h  vc_fwd.h
